package app;

public class Main {

    public static void main(String[] args) {
        MainMenu m = new MainMenu("user.csv", "series.csv", "movie.csv");

        m.show();



    }

}
