package app;

public interface MedieFunctions {


    public void medieIsPlaying();


    public void medieIsPaused();


    public void medieIsEnded();


}
