@startuml
'https://plantuml.com/class-diagram

class Main{
    +static void main(String[] args)
}

class MainMenu {
    -String userFilePath;
    -String movieFilePath;
    -String seriesFilePath;
    + MainMenu(String userFilePath, String movieFilePath, String seriesFilePath);
    -ArrayList<Movie> movieList;
    -ArrayList<Series> seriesList;
    -ArrayList<User> users;
    -User currentUser;
    -UIText ui;

    +void show();
    +void validMail();
    +void login();
    +void createAccount();
    +void loadUsersFromFile();
    +void listAllMovies();
    +void listAllSeries();
    +void saveUsersToFile();
    +void showUserMenu();
}

class UIText {
    Scanner scanner;
    +void displayMsg(String msg);
    +int promptNumeric(String msg);
    +String promptText(String msg);
    +boolean promptBinary(String msg);
}

class FileIO {
    +ArrayList<User> loadUsers(String filepath);
    +void saveUsers(String filepath, ArrayList<User> users);
    +ArrayList<Medie> loadMovies(String filepath);
    +ArrayList<Medie> loadSeries(String filepath);
    +void saveUserLists(String folderPath, User user);
    +void loadUserLists(String folderPath, User user, ArrayList<Medie> allMedia);
}

interface MedieFunctions {
    +void medieIsPlaying();
    +void medieIsPaused();
    +void medieIsEnded();
}

abstract class Medie {
    -String title;
    -ArrayList<String> genres;
    -int releaseYear;
    -double rating;
    -ArrayList<User> usersWhoHaveSeen;

    +Medie(String title, ArrayList<String> genres, int releaseYear, double rating);
    +String getTitle();
    +ArrayList<String> getGenres();
    +int getReleaseYear();
    +void setRating(double rating);
    +boolean matchesGenre(String genre);
    +boolean matchesTitle(String title);
    +void displayInfo();
    +String toFileString();
    +void medieIsPlaying();
    +void medieIsPaused();
    +void medieIsEnded();
}

class Movie {
    -double movieLength;

    +Movie(String title, ArrayList<String> genres, int releaseYear, double rating, double movieLength);
    +int getMovieLength();
    +void setMovieLength(double length);
    +boolean isLongMovie();
    +boolean isShortMovie();
    +boolean isRatedAbove(double isRating);
}

class Series {
    -int seasons;
    -int episodes;
    -double episodeLength;
    +Series(String title, ArrayList<String> genres, int releaseYear, double rating, int seasons, int episodes, int episodeLength);
    +int getSeasons();
    +int getEpisodes();
    +int getEpisodeLength();
    +void setSeasons(int seasons);
    +void setEpisodes(int episodes);
    +void setEpisodeLength(int length);
    +boolean isMiniSeries();
    +boolean isRatedAbove(double isRating);
}

class User {
    -String name;
    -String mail;
    -String code;
    -ArrayList<Medie> seenList;
    -ArrayList<Medie> favoriteList;
    -ArrayList<Medie> continueList;
    +User(String name, String mail, String code);
    +String getName();
    +String getMail();
    +String getCode();
    +void addToList(String listName, Medie media);
    +void removeFromList(String listName, Medie media);
    +void viewList(String listName);
}

' IS-A relationships
Medie <|-- Movie
Medie <|-- Series
Medie ..|> MedieFunctions

' HAS-A relationships
MainMenu o-- User
MainMenu o-- UIText
MainMenu o-- Movie
MainMenu o-- Series

User o-- Medie
Medie o-- User

FileIO --> Medie
Main o-- MainMenu

@enduml
